Refactor path handling in TestResource to use Path.of() for improved readability and consistency.